--- a/cameras.html
+++ b/cameras.html
@@ -4,5 +4,6 @@
 <img src="http://frcvision.local:1181/stream.mjpg" width="400px"/>
 <img src="http://frcvision.local:1182/stream.mjpg" width="400px"/>
 <img src="http://frcvision.local:1183/stream.mjpg" width="400px"/>
+<img src="http://frcvision.local:1184/stream.mjpg" width="400px"/>
 </body>
 </html>
